[package]
name = "eager-const"
version = "0.1.0"
authors = ["Matti Virkkunen <mvirkkunen@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[features]
inside = []

[dependencies]
quote = "1.0.2"
syn = { version = "1.0.14", features = ["full", "extra-traits"] }
cargo_toml = "0.8.0"
toml = "0.5.6"
